--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -22,15 +22,16 @@
         android:roundIcon="@mipmap/app_logo"
         android:supportsRtl="true"
         android:theme="@style/BaseAppTheme">
-        <activity android:name="com.just.agentweb.sample.activity.MainActivity">
+        <activity android:name="com.just.agentweb.sample.activity.WebActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name="com.just.agentweb.sample.activity.WebActivity"
+            android:name="com.just.agentweb.sample.activity.MainActivity"
             android:launchMode="singleTop" />
 
         <activity
