--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
     <application
         android:name="com.just.agentweb.sample.app.App"
         android:allowBackup="true"
-        android:icon="@mipmap/app_logo"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:logo="@mipmap/app_logo"
-        android:roundIcon="@mipmap/app_logo"
+        android:logo="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/BaseAppTheme">
         <activity android:name="com.just.agentweb.sample.activity.WebActivity">
